[project]
name = "vllm-zero2hero"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    # "vllm>=0.18.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "huggingface-hub>=1.7.2",
    "openai>=2.33.0",
    "locust>=2.43.4"

]
